# edhenry.github.io

./: .gitignore  .nojekyll  _config.yml  _quarto.yml  about.html  about.md  about.qmd  index.html  index.qmd  listings.json  notes.html  notes.qmd  pyproject.toml  quotes.html  quotes.qmd  research.html  research.qmd  robots.txt  search.json  sitemap.xml  software.html  software.qmd  styles.css
.github/workflows/: quarto-publish.yml
.sass-cache/259a8d278d1c312039c301531278e37b702c9a65/: _bourbon-deprecated-upcoming.scssc  _bourbon.scssc
_includes/: head.html
_layouts/: page.html
_posts/: 2016-01-06-Breadth-First-Search.md  2016-11-29-Backprop.markdown  2016-12-17-Sequential-and-Binary-Search-in-Python.md  2016-12-21-First-Class-Functions.md  2016-12-21-Hashing-in-Python.md  2016-12-21-Netflow-flow2vec.md  2017-01-16-Algorithms-Toolbox-Week 2.md  2017-06-01-Summer-of-Machine-Learning.md  2017-12-10-New-Year-New-Position.md  2018-06-08-Data-Science-Machine-Learning-and-Artificial-Intelligence.md  2018-06-08-Machine-Learning-and-Artificial-Intelligence.md  2019-04-18-ML-in-the-wild.md  2019-12-8-NeurIPS-Notes.md
_site/: 404.html  README.md  about.html  atom.xml  feed.xml  index.html  search.json
_site/about/: index.html
_site/contact/: index.html
docs/: about.html  index.html  listings.json  notes.html  quotes.html  research.html  search.json  software.html  styles.css
notes/: index.html  notes.qmd
old_blog/: Gemfile  README.md  _config.yml  about.html  index.html
projects/: projects.html
research/: _metadata.yml
talks/: talks.html  talks.qmd
(+225 files in other folders)
