[tool.poetry]
name = "edhenry-github-io"
version = "0.1.0"
description = "Ed Henry's Personal Research Notebook"
authors = ["Ed Henry <edward.m.henry@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "edhenry"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
lightning = "^2.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
ruff = "^0.1.11"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
