[project]
name = "edhenry-blog"
version = "0.1.0"
description = "Ed Henry's personal research notebook"
authors = [
  { name = "Ed Henry", email = "edward.m.henry@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "jupyter>=1.0",
  "ipykernel>=6.29",
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
  "networkx>=3.2",
  "gensim>=4.3",
  "joblib>=1.3",
  "mpld3>=0.5",
]

[dependency-groups]
dev = [
  "mypy>=1.8",
  "black>=23.12",
  "ruff>=0.1.11",
  "pylint>=3.0",
]

[tool.uv]
package = false
